@@ -75,5 +75,11 @@ void printRow(ostream & o, double x);
 /// Returns true if f's a nan. Unfortunately, the behaviour of this function
 /// is not standardised across all platforms yet. 
 bool testNan(double f);
+
+/// Returns the relative difference between the orders of magnitude of two
+/// numbers unless they are less than one, in which case it returns the value
+/// of the absolute difference
+double sTfn(double sTins, double sTouts);
+
 #endif
 
